2012-02-04  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/gettext/gettext.c: Mostly rewritten to avoid using
	lists (by always binsearching), improve caching (cache strings
	used for binsearch, not only results), improve
	maintainability (by using more structured binary search) and correct
	error handling.

2012-02-04  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/script/execute.c (grub_script_return): Fix warning.

2012-02-04  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/script/execute.c (grub_script_return): Fix potential
	NULL-dereference.
	Reported by: Jim Meyering.

2012-02-03  Vladimir Serbinenko  <phcoder@gmail.com>

	* po/POTFILES.in: Regenerate.
	* util/grub-install.in: Gettextize the strings missed in first pass.

2012-02-03  Vladimir Serbinenko  <phcoder@gmail.com>

	* Makefile.util.def (grub-mkdevicemap): Removed.
	* include/grub/emu/hostdisk.h (grub_util_get_os_disk): New proto.
	* include/grub/util/deviceiter.h: Removed.
	* util/deviceiter.c: Likewise.
	* util/getroot.c (grub_util_get_os_disk): New function.
	* util/grub-install.in: Remove grub-mkdevicemap. Use -t disk as
	replacement for EFI.
	* util/grub-mkdevicemap.c: Removed.
	* util/grub-probe.c (probe): Handle PRINT_DISK.
	(argp_parser): Handle -t disk.

2012-02-03  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-mkfont.c: Migrate to argp.
	* util/grub-mklayout.c: Likewise.
	* util/grub-mkpasswd-pbkdf2.c: Likewise.
	* util/grub-mkrelpath.c: Likewise.
	* util/grub-probe.c: Likewise.
	* util/grub-script-check.c: Likewise.

2012-02-03  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-reboot.in: Add missing datarootdir.
	Add missing newline.
	* util/grub-set-default.in: Add missing datarootdir.
	* util/powerpc/ieee1275/grub-mkrescue.in: Add missing newline.
	* util/grub-mkrescue.in: Likewise.

2012-02-03  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub.d/30_os-prober.in: Fix TRANSLATORS comment.

2012-02-03  Vladimir Serbinenko  <phcoder@gmail.com>
