@@ -186,7 +186,7 @@ int EXPORT_FUNC(grub_devalias_iterate)
      (int (*hook) (struct grub_ieee1275_devalias *alias));
 int EXPORT_FUNC(grub_children_iterate) (const char *devpath,
      int (*hook) (struct grub_ieee1275_devalias *alias));
-int EXPORT_FUNC(grub_claimmap) (grub_addr_t addr, grub_size_t size);
+grub_err_t EXPORT_FUNC(grub_claimmap) (grub_addr_t addr, grub_size_t size);
 
 int
 EXPORT_FUNC(grub_ieee1275_map) (grub_addr_t phys, grub_addr_t virt,
